<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gray2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info"
            android:textColor="@color/TextColorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:paddingTop="15dip"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_name"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/user_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name_ex"
                android:gravity="right"
                android:textColor="@color/TextColorGray" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:paddingTop="10dip"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authroizedName"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/authroized_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/authroizedName_ex"
                android:gravity="right"
                android:textColor="@color/TextColorGray" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:paddingTop="10dip"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id_card"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/id_card"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/id_card_ex"
                android:gravity="right"
                android:textColor="@color/TextColorGray" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginTop="10dip"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_play_type"
            android:textColor="@color/TextColorGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:paddingTop="15dip"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aliplay"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/aliplay"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name_ex"
                android:gravity="right"
                android:textColor="@color/TextColorGray" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:paddingTop="10dip"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wei_xing"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/wei_xing"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name_ex"
                android:gravity="right"
                android:textColor="@color/TextColorGray" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:paddingTop="10dip"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_card"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/bank_card"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bank_card_ex"
                android:gravity="right"
                android:textColor="@color/TextColorGray" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:orientation="horizontal"
        android:padding="15dip">
        
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_order_income"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/today_income"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/money_yuan_ex"
                android:gravity="right"
                android:textColor="@color/white" 
                android:textSize="18sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:orientation="horizontal"
        android:layout_marginTop="4dip"
        android:padding="15dip">
        
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_month_income"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/last_month_income"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_month_ex"
                android:gravity="right"
                android:textColor="@color/white" 
                android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/quite_login"
        android:layout_marginTop="30dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/quite_login" 
        android:textColor="@android:color/white"
        android:background="#ffeb6876"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="20dip"
        android:enabled="true"/>
</LinearLayout>