<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    android:background="@color/white">

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dip">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:text="@string/park_time" 
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/consume_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:text="@string/park_time_ex" 
        android:textSize="18sp"
        android:layout_marginLeft="20dip"/>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/mainColor"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"/>
    
    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:text="@string/income" 
        android:textSize="18sp"/>
        
        <EditText
            android:id="@+id/play_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:hint="@string/play_hint_ex" 
        android:background="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="20dip"
        android:inputType="number"
        />
    </LinearLayout>
    <Button
        android:id="@+id/confirm_neworder"
        android:layout_marginTop="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" 
        android:textColor="@android:color/white"
        android:background="#ffeb6876"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="20dip"/>


</LinearLayout>