<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffcccccc"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="40dip"
        android:background="#ffffffff"
        android:orientation="horizontal"
        android:paddingLeft="20dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_phone"
            android:textColor="#ff00bf71"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/mobile_number"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center_vertical"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:textSize="14sp" 
            android:paddingLeft="10dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="5dip"
        android:background="#ffffffff"
        android:orientation="horizontal"
        android:paddingLeft="20dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validate_code"
            android:textColor="#ff00bf71"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/validate_code"
            android:layout_width="0dip"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center_vertical"
            android:hint="@string/hint_validate"
            android:inputType="number"
            android:textSize="14sp" 
            android:paddingLeft="10dip"/>
        <Button
            android:id="@+id/get_validate_code"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/get_validate_code"
            android:background="@drawable/validate_code_button"
            android:textColor="@drawable/validate_code_button"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingLeft="6dip"
            android:paddingRight="6dip"
            android:enabled="true"
            />
    </LinearLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:text="@string/login"
        android:background="@drawable/login_bkg"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="25dip"
        android:textColor="#ffffffff"
        android:enabled="false"/>

</LinearLayout>