<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/orderlist_bkg">

    <ImageView
        android:id="@+id/car_pic"
        android:layout_width="0dip"
        android:layout_height="100dip"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:src="@drawable/takephoto" 
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" 
        android:paddingLeft="8dip"
        android:paddingTop="5dip"
        android:paddingRight="5dip"
        android:paddingBottom="5dip">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/car_plate"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/plate_ex" 
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/fee_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_ex" 
                android:textSize="14sp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="2dip"/>
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_ex" 
                android:textSize="19sp"
                android:textColor="@color/mainColor"
                android:singleLine="true"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" 
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginTop="5dip">
            <TextView
                android:id="@+id/status_park"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/park_already" 
                android:textSize="14sp"
                style="@style/order_list_selected"
                android:gravity="center"/>
            <TextView
                android:id="@+id/status_leaved"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/leaved" 
                android:textSize="14sp"
                android:layout_marginLeft="-2dip"
                android:gravity="center"
                style="@style/order_list_unselected"/>
        </LinearLayout>
        
    </LinearLayout>

</LinearLayout>