<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="#ffffffff"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back_neworder"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:contentDescription="@null"
            android:src="@drawable/back_n" />

        <TextView
            style="@style/public_title"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_order" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ImageView
        android:id="@+id/car_pic_new"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:contentDescription="@null"
        android:src="@drawable/takephoto" 
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/time_neworder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"/>

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bianhao" />

        <TextView
            android:id="@+id/car_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="#00bf71"
            android:gravity="center"
            android:text="@string/fee_type"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/fee_type"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1" 
            android:background="#ffffffff"
            android:paddingLeft="15dip"
            android:gravity="center_vertical"
            >
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="horizontal" 
        android:layout_marginTop="2dip">

        <TextView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="#00bf71"
            android:gravity="center"
            android:text="@string/money_t"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            android:labelFor="@+id/play_money" 
            />

        <EditText
            android:id="@+id/play_money"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center"
            android:inputType="number" 
            >
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffffff"
        android:orientation="horizontal" 
        android:layout_marginTop="2dip">

        <TextView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="#00bf71"
            android:gravity="center"
            android:text="@string/car_num"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp"
            android:labelFor="@+id/car_num" 
            />

        <EditText
            android:id="@+id/car_num"
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#ffffffff"
            android:gravity="center"
            android:inputType="text" 
            android:text="@string/car_number_pre"
            >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/confirm_neworder"
        android:layout_marginTop="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" 
        android:textColor="@android:color/white"
        android:background="#ffeb6876"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginBottom="10dip"/>

</LinearLayout>