<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dip"
        android:background="#ffffffff"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/order_type_0"
            style="@style/order_list_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_orders" >
        </TextView>

        <TextView
            android:id="@+id/order_type_1"
            style="@style/order_list_unselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-2dip"
            android:text="@string/order_type_time" />

        <TextView
            android:id="@+id/order_type_2"
            style="@style/order_list_unselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-2dip"
            android:enabled="true"
            android:text="@string/order_list_itme" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip" 
        android:background="@color/back_gray2"/>

    <ListView
        android:id="@+id/order_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#ffffffff"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:divider="#ffffffff"
        android:dividerHeight="6dip"
        >
    </ListView>

</LinearLayout>