<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:gravity="center_vertical"
    android:background="@color/white">

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="20dip">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:text="@string/user_info_name2" 
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/user_name"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:background="@color/white"
        android:textSize="18sp"
        android:layout_marginLeft="5dip" 
        android:inputType="text"/>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/mainColor"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"/>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dip">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:text="@string/id_card2" 
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/id_card"
        android:layout_width="0dip"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="@color/mainColor"
        android:background="@color/white"
        android:textSize="14sp"
        android:layout_marginLeft="5dip" android:inputType="text"/>
    </LinearLayout>
    
    <Button
        android:id="@+id/confirm_neworder"
        android:layout_marginTop="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" 
        android:textColor="@android:color/white"
        android:background="#ffeb6876"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginBottom="20dip"/>


</LinearLayout>